[package]
name = "chimney"
description = "Santa sync server"
version = "0.1.0"
authors = ["skim <skim@skim.dev>"]
edition = "2024"
repository = "https://github.com/sl4m/chimney-rs"
license = "MIT"

[dependencies]
chimney-server = { path = "../server" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
