[package]
name = "chimney-server"
description = "Santa sync server"
version = "0.1.0"
authors = ["skim <skim@skim.dev>"]
edition = "2021"
repository = "https://github.com/sl4m/chimney-rs"
license = "MIT"

[dependencies]
santa-types = { path = "../types" }
anyhow = "1.0"
async-trait = "0.1.83"
bytes = "1"
camino = { version = "1.1", features = ["serde1"] }
dropshot = "0.15.1"
flate2 = "1.0"
http = "1.1.0"
hyper = { version = "1.5.0", features = ["full"] }
schemars = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0"
